@@ -11,7 +11,7 @@ C
       REAL*8   D_FTOC                                   
       REAL*8   TIME,UTCSEC,DELAY,RATE,U,V,W, TWOPI, XAZ(2), RAZ(2)
       REAL*8   XMSA(2), RMSA(2), BJ2000(3,3)
-      REAL*8   XDELAY,XRATE,SEQ, BSLN(3,2), SRC(3), EARTH(3,3)
+      REAL*8   XDELAY,XRATE,SEQ, BSLN(3,3), SRC(3), EARTH(3,3)
       REAL*8   RISETIME,SETTIME,NEXTELEV,SRCELEV(2,2), CALC_DELAY
       REAL*8   ACCEL,UT1UTC, XPOLE, YPOLE, ATMOS(2,2), DATMOS(2,2)
       REAL*8   XELEV(2), RELEV(2), RC_PLUS_EPS2(3), DLYSAVE(2), EPS2(3)
